# miniloop

./: .clang-format  .gitignore  CMakeLists.txt  JSON.h  Object.cpp  README.md  libminiloop.pc.in
cmake/: CMakeRegistry.cmake  SetEnv.cmake  Uninstall.cmake.in  miniJsonConfig.cmake  miniLoopConfig.cmake
example/: CMakeLists.txt  main.cpp
miniLoop/: AlarmClock.cpp  AlarmClock.h  CMakeLists.txt  IO.cpp  Loop.cpp  Loop.h  Timeout.cpp  UnixSignal.cpp
minijson/: CMakeLists.txt  JSON.h  Object.cpp
